
add_subdirectory(Singleton)
add_subdirectory(Factory)
add_subdirectory(AbstractFactory)
add_subdirectory(Builder)
add_subdirectory(Prototype)
add_subdirectory(Bridge)
add_subdirectory(Adapter)
add_subdirectory(Decorator)
add_subdirectory(Composite)
add_subdirectory(Flyweight)
add_subdirectory(Facade)
add_subdirectory(Proxy)
add_subdirectory(Template)
add_subdirectory(Strategy)
add_subdirectory(State)
add_subdirectory(Observer)
add_subdirectory(Command)
add_subdirectory(Interpreter)
add_subdirectory(Iterator)
add_subdirectory(Visitor)
add_subdirectory(Memento)

